# rust-frontend

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.css  main.rs  router.rs
src/components/atoms/: custom_button.rs  main_title.rs  struct_hello.rs  text_input.rs
src/components/molecules/: form.rs  mod.rs  struct_counter.rs
src/components/pages/: hello.rs  home.rs
