[package]
name = "rust_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
serde = "1.0"
serde_json = "1.0"
stylist = { version = "0.13", features = ["yew_integration", "parser"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
